# PortfolioSite

./: .gitignore  Cargo.toml  build.rs
src/: main.rs
src/component/: conditional.rs  footer.rs  header.rs  mod.rs
src/component/project/: mod.rs  project_list_entry.rs
src/data/: mc_mods.rs  mod.rs  project.rs
src/templates/: about.rs  index.rs  mod.rs  navbar.rs  project.rs  projects.rs
static/scss/: about.scss  common.scss  footer.scss  header.scss  index.scss  navbar.scss  projects.scss
